src/test/deca/syntax/invalid/synt/opArith5.deca
// Description:
//    Programme opArithmetique avec probleme d'assignement
//
// Resultats:
//      extraneous input '*' expecting {'new', 'null', 'this', 'true', 'false', 'readInt', 'readFloat', '-', '(', '!', INT, FLOAT, STRING, IDENT}
// Historique:
//    cree le 01/01/2022

{
    int a=*8;

}
